# sdk-c

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  publish.yml
include/: wsocket.h
src/: wsocket.c
